# aop-globalization

./: .gitignore  Dockerfile  Package.swift  Panteão.code-workspace  README.md  UNSUPPORTED_LANGUAGES.md  build.gradle  composer.json  erro.md  index.html  index.js  metrics_report.md  package-lock.json  package.json  settings.gradle  test_all_features.js  test_counter.js  test_ipc.js  test_version.sh
.github/workflows/: build-engines.yml  publish-dart.yml  publish-sdks.yml  release-sdks.yml
script/: fix_cpp.py  fix_cpp_final.py  fix_java.py  fix_objc.py  fix_tests.py  index.d.ts  index.js  patch_kt_scala.py  publish-npm.sh  refactor_to_send_msg.py  run_all_js_tests.sh  run_all_tests.sh  run_c.sh  test_all_features.js  test_athena.js  test_counter.js  test_ipc.js
sdk/c/: Makefile
sdk/cpp/: CMakeLists.txt
sdk/csharp/: Panteao.Client.csproj
sdk/dart/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
sdk/go/: client.go  go.mod
sdk/java/: build.gradle  settings.gradle
sdk/javascript/: index.js  package.json  panteao-1.0.0.tgz  panteao-js-1.0.0.tgz
sdk/kotlin/: build.gradle.kts
sdk/php/: composer.json
sdk/python/: README.md  pyproject.toml
sdk/python/src/panteao/: __init__.py  client.py
sdk/r/: DESCRIPTION
sdk/r/R/: client.R
sdk/ruby/: panteao-client.gemspec
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
sdk/scala/: build.sbt
sdk/shell/: panteao_client.sh
sdk/typescript/: package-lock.json  package.json  panteao-ts-1.0.0.tgz  panteaots-1.0.0.tgz  tsconfig.json
test/: all_features_agent.asl  all_features_test.jcm  bob.asl  counter_agent.asl  counter_test.jcm  project.jcm  test_athena.jcm  test_canvas.asl  test_canvas.jcm  test_ipc.asl  test_ipc.jcm
test/realease/cpp-panteao/: CMakeLists.txt  Dockerfile  bob.asl  main.cpp
(+123 files in other folders)
