[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "panteao-py"
version = "1.1.17"
description = "Python SDK for Panteao BDI Coprocessor"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/panteao"]
