[package]
name = "panteao-client"
version = "1.0.0"
edition = "2021"
authors = ["Panteao Authors"]
description = "Rust client SDK for Panteao BDI Coprocessor"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "2.9"
tar = "0.4"
flate2 = "1.0"
